--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,8 @@
   },
   "require": {
     "php": "^8.0",
-    "ext-json": "*"
-  }
+    "your-vendor/import-commands": "^1.0@dev"
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
