--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,13 @@
       "email": "adanielian@saber.games"
     }
   ],
+  "minimum-stability": "stable",
+  "require": {
+    "php": "^8.0"
+  },
   "autoload": {
     "psr-4": {
       "YourVendor\\ImportCommands\\": "src/"
     }
-  },
-  "require": {
-    "php": "^8.0"
-  },
-  "minimum-stability": "dev",
-  "prefer-stable": true
+  }
 }
