--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   ],
   "minimum-stability": "stable",
   "require": {
-    "php": "^8.0"
+    "php": "^8.0",
+    "your-vendor/import-commands": "^1.0"
   },
   "autoload": {
     "psr-4": {
