--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,9 @@
       "email": "adanielian@saber.games"
     }
   ],
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
   "require": {
-    "php": "^8.0",
-    "your-vendor/import-commands": "^1.0"
+    "php": "^8.0"
   },
   "autoload": {
     "psr-4": {
